# nezha_cyber

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.gitcode/: compile.sh
.github/: release.yml
.github/workflows/: ci.yml  release.yml
docs/: 01_system_architecture.puml  02_startup_sequence.puml  03_event_loop_flow.puml  04_api_stream_sequence.puml  05_function_calling_sequence.puml  06_elm_architecture_state.puml  07_module_dependency.puml  08_network_deployment.puml  09_tui_layout.puml  10_data_model_er.puml
src/: action.rs  app.rs  lib.rs  main.rs
src/agent/: config.rs  mod.rs
src/api/: deepseek.rs  mod.rs  types.rs
src/persistence/: db.rs  mod.rs
src/tools/: executor.rs  mod.rs  ocr.rs
src/ui/: layout.rs  mod.rs  render.rs  theme.rs
tests/: integration_test.rs
