[package]
name = "nezha_cyber"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm", "all-widgets"] }
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
chrono = "0.4"
unicode-width = "0.2"
anyhow = "1"
dotenvy = "0.15"
